[gd_scene load_steps=8 format=3 uid="uid://dc7b2eksr4r8c"]

[ext_resource type="Script" path="res://ui.gd" id="1_heb1e"]
[ext_resource type="FontFile" uid="uid://dvsn5r8egkubh" path="res://assets/DS-DIGIB.TTF" id="1_ylyaj"]
[ext_resource type="Texture2D" uid="uid://cv42xopvpixu4" path="res://assets/button_smile.png" id="2_v8sa8"]
[ext_resource type="Texture2D" uid="uid://mnfw1gl1ngh3" path="res://assets/button_smile_pressed.png" id="3_lq8x0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6j66"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nllkv"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ufe7"]
bg_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_heb1e")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 80)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i6j66")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="GrubCountPanel" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nllkv")

[node name="GrubCountLabel" type="Label" parent="PanelContainer/HBoxContainer/GrubCountPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.882353, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ylyaj")
theme_override_font_sizes/font_size = 40
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameStatusButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_v8sa8")
texture_pressed = ExtResource("3_lq8x0")
stretch_mode = 4

[node name="TimerPanel" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5ufe7")

[node name="TimerLabel" type="Label" parent="PanelContainer/HBoxContainer/TimerPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.882353, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ylyaj")
theme_override_font_sizes/font_size = 40
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "New Game"

[node name="SettingsButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Settings"

[connection signal="pressed" from="PanelContainer/HBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
